# mcp-oauth

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  audit.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/store/: json_file.rs  mod.rs
templates/: authorize.html  authorize_setup.html  common.css  error.html  register.html
