[package]
name = "mcp-oauth"
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
description = "Reusable OAuth 2.1 layer for MCP servers, compatible with Claude.ai"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pecheriere/mcp-oauth"
homepage = "https://github.com/pecheriere/mcp-oauth"
readme = "README.md"
keywords = ["mcp", "oauth", "auth", "claude", "axum"]
categories = ["authentication", "web-programming"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
base64 = "0.22"
tracing = "0.1"
url = "2"
webauthn-rs = "0.5"
subtle = "2"
rand = "0.10"
serde_urlencoded = "0.7"
governor = "0.10"
askama = "0.15"
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
axum-test = "20.0.0"
tempfile = "3.27.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
